--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8368997072131126"
      crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/heic2any/0.0.1/index.js" integrity="sha512-eEZcFEz8toxNm9+DHMf8Q3+wgZjU0no5THCktIEhCyKk3JEFhn/uUaDCXO5MP7VtvLJQ5/VcLZut7bAHQO1C8Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
      <link rel="icon" type="image/x-icon" href="https://www.olieverard.co.uk/src/favicon.ico">
   </head>
 
@@ -31,7 +32,7 @@
       <p class="mb-8 leading-relaxed">Please upload a HEIC image file, and a it will be converted to a JPG for you. All of this is done client side, there's no uploading of your images to the internet! Please note this tool does not copy image metadata over.</p>
       <div class="flex justify-center">
           <form>
-              <input class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg" type="file" accept="image/*">
+              <input class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg" type="file" accept=".heic">
               <button type="submit" class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Convert</button>
             </form>
       </div>
@@ -39,32 +40,24 @@
   </div>
 </section>
 
-
-
   <script>
-    const form = document.querySelector('form');
-    form.addEventListener('submit', async (event) => {
-      event.preventDefault();
-      const file = event.target.querySelector('input[type="file"]').files[0];
-      const canvas = document.createElement('canvas');
-      const img = new Image();
-      img.src = URL.createObjectURL(file);
-      img.onload = async () => {
-        const zip = new JSZip();
-        const sizes = [16, 24, 32, 48, 64];
-        for (const size of sizes) {
-          canvas.width = size;
-          canvas.height = size;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0, size, size);
-          const icoDataUrl = canvas.toDataURL('image/x-icon');
-          const icoBlob = await (await fetch(icoDataUrl)).blob();
-          zip.file(`favicon-${size}.ico`, icoBlob);
-        }
-        const zipBlob = await zip.generateAsync({type: 'blob'});
-        saveAs(zipBlob, 'favicon.zip');
-      };
-    });
+const form = document.querySelector('form');
+form.addEventListener('submit', async (event) => {
+  event.preventDefault();
+  const file = event.target.querySelector('input[type="file"]').files[0];
+  const output = await heic2any({
+    blob: file,
+    toType: 'image/jpeg',
+    quality: 0.8
+  });
+  const outputBlob = new Blob([output], {type: 'image/jpeg'});
+  const outputUrl = URL.createObjectURL(outputBlob);
+  const link = document.createElement('a');
+  link.href = outputUrl;
+  link.download = file.name.replace(/\.heic$/i, '.jpg');
+  link.click();
+});
+
   </script>
 
     </body>
