--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
      crossorigin="anonymous"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/heic2any/0.0.1/index.js" integrity="sha512-eEZcFEz8toxNm9+DHMf8Q3+wgZjU0no5THCktIEhCyKk3JEFhn/uUaDCXO5MP7VtvLJQ5/VcLZut7bAHQO1C8Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
      <link rel="icon" type="image/x-icon" href="https://www.olieverard.co.uk/src/favicon.ico">
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
+
   </head>
 
   <body class="bg-white">
@@ -29,34 +31,79 @@
   <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
     <div class="text-center lg:w-2/3 w-full">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">heic2jpg Converter</h1>
-      <p class="mb-8 leading-relaxed">Please upload a HEIC image file, and a it will be converted to a JPG for you. All of this is done client side, there's no uploading of your images to the internet! Please note this tool does not copy image metadata over.</p>
-      <div class="flex justify-center">
-          <form>
-              <input class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg" type="file" accept=".heic">
-              <button type="submit" class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Convert</button>
-            </form>
-      </div>
+      <p class="mb-8 leading-relaxed">Please upload a HEIC image file, or a zip file containing multiple HEIC images, and they will be converted to JPGs for you. All of this is done client side, there's no uploading of your images to the internet! Please note this tool does not copy image metadata over. It also may take a long time for multiple images.</p>
+      <form>
+        <input class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg" type="file" accept=".heic, .zip">
+        <button type="submit" class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Convert</button>
+      </form>
     </div>
   </div>
 </section>
 
   <script>
+
+
+//File submit 
 const form = document.querySelector('form');
-form.addEventListener('submit', async (event) => {
-  event.preventDefault();
-  const file = event.target.querySelector('input[type="file"]').files[0];
-  const output = await heic2any({
-    blob: file,
+const input = form.querySelector('input[type="file"]');
+const convertButton = form.querySelector('button[type="submit"]');
+
+function convertHEICtoJPG(blob) {
+  return heic2any({
+    blob: blob,
     toType: 'image/jpeg',
     quality: 0.8
+  }).then((output) => {
+    const outputBlob = new Blob([output], {type: 'image/jpeg'});
+    const outputUrl = URL.createObjectURL(outputBlob);
+    const link = document.createElement('a');
+    link.href = outputUrl;
+    link.download = blob.name.replace(/\.heic$/i, '.jpg');
+    link.click();
   });
-  const outputBlob = new Blob([output], {type: 'image/jpeg'});
-  const outputUrl = URL.createObjectURL(outputBlob);
-  const link = document.createElement('a');
-  link.href = outputUrl;
-  link.download = file.name.replace(/\.heic$/i, '.jpg');
-  link.click();
+}
+
+function convertZipToJPG(zipFile) {
+  return JSZip.loadAsync(zipFile).then(async (zip) => {
+    const jpgZip = new JSZip();
+
+    await Promise.all(Object.keys(zip.files).map(async (filename) => {
+      const file = zip.files[filename];
+      if (!file.dir && file.name.endsWith('.heic')) {
+        const output = await heic2any({
+          blob: await file.async('blob'),
+          toType: 'image/jpeg',
+          quality: 0.8
+        });
+        jpgZip.file(file.name.replace(/\.heic$/i, '.jpg'), output);
+      }
+    }));
+
+    const jpgZipBlob = await jpgZip.generateAsync({type:"blob"});
+    const jpgZipUrl = URL.createObjectURL(jpgZipBlob);
+    const link = document.createElement('a');
+    link.href = jpgZipUrl;
+    link.download = zipFile.name.replace(/\.zip$/i, '_jpg.zip');
+    link.click();
+  });
+}
+
+convertButton.addEventListener('click', async (event) => {
+  event.preventDefault();
+  const file = input.files[0];
+  if (!file) return;
+  if (file.name.endsWith('.heic')) {
+    await convertHEICtoJPG(file);
+  } else if (file.name.endsWith('.zip')) {
+    await convertZipToJPG(file);
+  }
 });
+
+input.addEventListener('change', () => {
+  convertButton.disabled = !input.value;
+});
+
+
 
   </script>
 
