--- a/index.html
+++ b/index.html
@@ -54,23 +54,32 @@
   let imageCount = 0;
   
   function convertHEICtoJPG(blob) {
+  processingMessage.style.display = 'block';
+  return heic2any({
+    blob: blob,
+    toType: 'image/jpeg',
+    quality: 0.8
+  }).then((output) => {
+    const outputBlob = new Blob([output], {type: 'image/jpeg'});
+    const outputUrl = URL.createObjectURL(outputBlob);
+    const link = document.createElement('a');
+    link.href = outputUrl;
+    link.download = blob.name.replace(/\.heic$/i, '.jpg');
+    link.click();
+    imageCount++;
+    updateProcessingMessage();
+  });
+}
+
+function updateProcessingMessage() {
+  processingMessage.innerText = `Processing... This may take a while. File will download automatically. Images processed so far: ${imageCount}`;
+  if (imageCount > 0) {
     processingMessage.style.display = 'block';
-    return heic2any({
-      blob: blob,
-      toType: 'image/jpeg',
-      quality: 0.8
-    }).then((output) => {
-      const outputBlob = new Blob([output], {type: 'image/jpeg'});
-      const outputUrl = URL.createObjectURL(outputBlob);
-      const link = document.createElement('a');
-      link.href = outputUrl;
-      link.download = blob.name.replace(/\.heic$/i, '.jpg');
-      link.click();
-      imageCount++;
-      processingMessage.innerText = `Processing... This may take a while. File will download automatically. Images processed so far: ${imageCount}`;
-      processingMessage.style.display = 'none';
-    });
+  } else {
+    processingMessage.style.display = 'none';
   }
+}
+
   
   function convertZipToJPG(zipFile) {
     processingMessage.style.display = 'block';
@@ -87,8 +96,9 @@
           });
           jpgZip.file(file.name.replace(/\.heic$/i, '.jpg'), output);
           imageCount++;
+          updateProcessingMessage();
         }
-      }));
+      }), imageCount = 0);
   
       const jpgZipBlob = await jpgZip.generateAsync({type:"blob"});
       const jpgZipUrl = URL.createObjectURL(jpgZipBlob);
