--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/heic2any/0.0.1/index.js" integrity="sha512-eEZcFEz8toxNm9+DHMf8Q3+wgZjU0no5THCktIEhCyKk3JEFhn/uUaDCXO5MP7VtvLJQ5/VcLZut7bAHQO1C8Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
      <link rel="icon" type="image/x-icon" href="https://www.olieverard.co.uk/src/favicon.ico">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
+     <meta name="viewport" content="width=device-width">
 
   </head>
 
