--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </form>
       <p class="mb-8 leading-relaxed">You need an internet connection to access this site, but the files you submit never leave your computer. The tool handles the files completley offline, ensuring that your images remain private and secure.
       </p>
-      <p class="mb-8 leading-relaxed">Because of this, it may take a while to process a large amount of images. Please note you must keep the tab as the active window on your computer, or the conversion may pause. I have added a progress indicator so you can tell how many images have already been processed by the tool. I tested converting a few hundred images, and it successfully processed them all eventually.  
+      <p class="mb-8 leading-relaxed">Because of this, it may take a while to process a large amount of images. Please note you must keep the tab as the active window on your computer, or the conversion may pause. I have added a progress indicator so you can tell how many images have already been processed by the tool. I tested converting a few hundred images, and it successfully processed them all eventually. Your mileage may vary on larger amounts of images, but I see no reason why they wouldn't be processed eventually. 
       </p>
       <p class="mb-8 leading-relaxed my-4">Most HEIC conversion tools have a limit on the amount of files that you can convert in one go, but this one does not. This is because most other tools pass the images to an external server, but this one handles them on your device. I try to build all <a href="https://www.olieverard.co.uk/tools">my tools</a> this way, to ensure privacy, security, and simplicity. 
       </p>
-      <p class="mb-8 leading-relaxed"> If you wish to see the code yourself, please go to <a href="https://www.olieverard.co.uk/repositories"> My GitHub Repositories Page</a> and view the source code for yourself. 
+      <p class="mb-8 leading-relaxed"> If you wish to see the code yourself, please go to <a href="https://www.olieverard.co.uk/repositories"> My GitHub Repositories Page</a> and view the source code for yourself. The code for all of the tools you can find on this site is all there! 
       </p>
     </div>
   </div>
