--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </p>
       <p class="mb-8 leading-relaxed"> If you wish to see the code yourself, please go to <a href="https://www.olieverard.co.uk/repositories"> My GitHub Repositories Page</a> and view the source code for yourself. The code for all of the tools you can find on this site is all there! 
       </p>
+      <p class="mb-8 leading-relaxed"> -Oli Everard
     </div>
   </div>
 </section>
